--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,21 @@
 {
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter"
+    "editor.defaultFormatter": "ms-python.python"
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
+  "editor.formatOnSave": true,
+  "black-formatter.args": ["--line-length=79"],
+  "black-formatter.interpreter": [
+    "/home/ajay/mambaforge/envs/jupyterlab-ext/bin/black"
+  ],
+  "black-formatter.path": [
+    "/home/ajay/mambaforge/envs/jupyterlab-ext/bin/black"
+  ],
+  "editor.defaultFormatter": "ms-python.black-formatter",
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
