--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "d3-scale": "^4.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-virtualized-auto-sizer": "^1.0.20",
         "recharts": "^2.0.10"
     },
     "devDependencies": {
