--- a/package.json
+++ b/package.json
@@ -59,16 +59,17 @@
         "@jupyterlab/coreutils": "^6.0.0",
         "@jupyterlab/launcher": "^4.0.5",
         "@jupyterlab/services": "^7.0.0",
-        "@types/d3-format": "^3.0.1",
         "d3-format": "^3.1.0",
         "d3-scale": "^4.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-virtualized-auto-sizer": "^1.0.20",
-        "recharts": "^2.0.10"
+        "recharts": "^2.8.0"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
+        "@types/d3-format": "^3.0.1",
+        "@types/d3-scale": "^4.0.4",
         "@types/json-schema": "^7.0.11",
         "@types/react": "^18.0.26",
         "@types/react-addons-linked-state-mixin": "^0.14.22",
