--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-    "name": "GPUDashboard",
-    "version": "0.1.0",
-    "description": "A JupyterLab extension for gpu monitoring",
+    "name": "jupyterlab-nvdashboard",
+    "version": "0.10.0",
+    "description": "A JupyterLab extension for displaying GPU usage dashboards",
     "keywords": [
         "jupyter",
         "jupyterlab",
         "jupyterlab-extension"
     ],
-    "homepage": "",
+    "homepage": "https://github.com/rapidsai/jupyterlab-nvdashboard",
     "bugs": {
-        "url": "/issues"
+        "url": "https://github.com/rapidsai/jupyterlab-nvdashboard/issues"
     },
-    "license": "BSD-3-Clause",
-    "author": {
-        "name": "GPUDashboard",
-        "email": ""
-    },
+    "license": "",
+    "author": "NV Dashbaord contributors",
     "files": [
         "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
         "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
@@ -26,7 +23,7 @@
     "style": "style/index.css",
     "repository": {
         "type": "git",
-        "url": ".git"
+        "url": "https://github.com/rapidsai/jupyterlab-nvdashboard.git"
     },
     "scripts": {
         "build": "jlpm build:lib && jlpm build:labextension:dev",
@@ -108,12 +105,12 @@
                     "pip"
                 ],
                 "base": {
-                    "name": "GPUDashboard"
+                    "name": "jupyterlab_nvdashboard"
                 }
             }
         },
         "extension": true,
-        "outputDir": "GPUDashboard/labextension",
+        "outputDir": "jupyterlab_nvdashboard/labextension",
         "schemaDir": "schema"
     },
     "eslintIgnore": [
